syntax = "proto3";

package auth;

option go_package = "auth-service/pkg/authpb";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  
  rpc Login (LoginRequest) returns (LoginResponse);
  
  rpc Validate (ValidateRequest) returns (ValidateResponse);
  
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
  
  rpc Logout (LogoutRequest) returns (LogoutResponse);

  rpc ForgotPassword (ForgotPasswordRequest) returns (ForgotPasswordResponse);
  rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse);

  rpc RequestEmailChange (RequestEmailChangeRequest) returns (RequestEmailChangeResponse);
  rpc ConfirmEmailChange (ConfirmEmailChangeRequest) returns (ConfirmEmailChangeResponse);

  rpc GetDevices (GetDevicesRequest) returns (GetDevicesResponse);
  rpc RemoveDevice (RemoveDeviceRequest) returns (RemoveDeviceResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string username = 3;
}

message RegisterResponse {
  string user_id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string device_id = 3; 
  string device_name = 4; 
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2; 
}

message ValidateRequest {
  string access_token = 1;
}

message ValidateResponse {
  string user_id = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1; 
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message LogoutRequest {
  string refresh_token = 1;
  string device_id = 2; 
}

message DeviceInfo {
  string id = 1;          // Внутренний ID или DeviceID с фронта
  string device_name = 2;
  string last_active = 3;
  bool is_current = 4;    // Чтобы подсветить текущее устройство на фронте
}

message GetDevicesRequest {
  string user_id = 1;
}

message GetDevicesResponse {
  repeated DeviceInfo devices = 1;
}

message RemoveDeviceRequest {
  string user_id = 1;
  string device_id = 2; 
}

message RemoveDeviceResponse {
  bool success = 1;
}

message LogoutResponse {
  bool success = 1;
  }

message ForgotPasswordRequest {
  string email = 1;
}

message ForgotPasswordResponse {
  bool success = 1;
}

message ResetPasswordRequest {
  string token = 2;
  string new_password = 3;
}

message ResetPasswordResponse {
  bool success = 1;
}

message RequestEmailChangeRequest {
  string user_id = 1;
  string new_email = 2;
}

message RequestEmailChangeResponse {
  bool success = 1;
  string message = 2; // "Письмо отправлено"
}

message ConfirmEmailChangeRequest {
  string token = 1; // Токен из ссылки в письме
}

message ConfirmEmailChangeResponse {
  bool success = 1;
  string message = 2;
}