syntax = "proto3";
package payment;
option go_package = "./pkg/paymentpb";

service PaymentService {
  // Для страницы "Тарифы"
  rpc GetPlans (GetPlansRequest) returns (GetPlansResponse);
  
  // Для страницы "Активация промокода"
  rpc RedeemPromo (RedeemPromoRequest) returns (RedeemPromoResponse);

  rpc PurchaseItem(PurchaseItemRequest) returns (PurchaseItemResponse);
}

message Plan {
  string id = 1;
  string name = 2;        // "Базовый", "PRO"
  int32 price = 3;
  string description = 4;
  int32 snowflake_price = 5; // Цена в снежинках
}

message GetPlansRequest {}
message GetPlansResponse {
  repeated Plan plans = 1;
}

message RedeemPromoRequest {
  string user_id = 1;
  string code = 2; // Например "FREE3DAY"
}

message RedeemPromoResponse {
  bool success = 1;
  string message = 2;    // "Подписка Базовый активирована"
  string plan_name = 3;
  int64 expires_at = 4;
}

message SpinWheelRequest {
  string user_id = 1;
}

message SpinWheelResponse {
  string prize_type = 1; // "BALANCE", "SLOT", "AVATAR", "EMPTY"
  int32 prize_value = 2; // Например: 50 (снежинок) или 1 (слот) или ID аватарки
  string message = 3;    // Текст выигрыша для фронта
  int32 remaining_balance = 4;
}
message PurchaseItemRequest {
  string user_id = 1;
  string item_id = 2; // ID курса (UUID) или ID аватарки (число)
  string item_type = 3; // "COURSE" или "AVATAR"
  
  // Доп. поля, чтобы не делать лишних запросов из payment-service
  string course_title = 4; 
  string course_cover_url = 5;
}
message PurchaseItemResponse {
  bool success = 1;
  string message = 2;
}
